--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Liberation Sans";
+    font-family: "Liberation Mono", "DejaVu Sans Mono", "Liberation Sans";
 }
 
 body {
@@ -17,6 +17,10 @@ body {
 
 nav ul {
     min-width: 700px;
+}
+
+nav ul li {
+    padding: 6px 2px;
 }
 
 h1, h2 {
@@ -50,7 +54,8 @@ header img {
 
 nav ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav ul li {
@@ -79,6 +84,17 @@ h1, h2, p, button, li {
     color: var(--fontgrey);
 }
 
+nav ul li a:hover, nav ul li:hover {
+    background-color: var(--fontgrey);
+    color: white;
+}
+ 
+nav ul li {
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: .5px;
+}
+
 h1 {
     font-size: 50px;
 }
@@ -93,10 +109,6 @@ button {
 
 section > h2 {
     text-align: center;
-}
-
-.navbar {
-    font-weight: bold;
 }
 
 .logo {
