--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ nav ul li {
     padding: 6px 2px;
 }
 
+select {
+    padding: 6px 10px;
+}
+
+header img {
+    padding: 20px;
+}
+
 h1, h2 {
     padding: 20px 0;
 }
@@ -43,7 +51,11 @@ header img {
 }
 
 .announce, .copyright {
-    min-width: 500px;
+    max-width: 500px;
+}
+
+.announce-container, .copyright-container {
+    padding-bottom: 50px;
 }
 
 /* FLEX */
@@ -68,15 +80,10 @@ header {
     align-items: flex-start;
 }
 
-header img {
-    padding: 20px;
-}
-
 .dualsection {
     display: flex;
     justify-content: space-around;
 }
-
 
 /* TEXT */
 
@@ -84,7 +91,7 @@ h1, h2, p, button, li {
     color: var(--fontgrey);
 }
 
-nav ul li a:hover, nav ul li:hover {
+nav ul li a:hover, nav ul li:hover, .start:hover {
     background-color: var(--fontgrey);
     color: white;
 }
@@ -95,12 +102,20 @@ nav ul li {
     letter-spacing: .5px;
 }
 
+select {
+    font-size: 18px;
+}
+
 h1 {
     font-size: 50px;
 }
 
 h2 {
     font-size: 30px;
+}
+
+.start {
+    font-size: 16px;
 }
 
 button {
@@ -127,13 +142,60 @@ button  {
     min-width: 200px;
 }
 
-a {
+.logo a {
     text-decoration: none;
     color: var(--fontgrey);
 }
 
 /* IMAGES */
 
-/* img {
-    
-} */
+nav ul img  {
+    padding: 4px;
+}
+
+.asearch {
+    padding: 2px 5px;
+    border-radius: 3px;
+}
+
+.asearch:hover {
+    background-color: var(--fontgrey);
+}
+
+.mglass {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+}
+
+.announce-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.iconphone {
+    min-width: 60px;
+    min-height: 60px;
+    max-width: 80px;
+    max-width: 80px;
+    padding: 0 20px;
+}
+
+.iconcc {
+    padding: 0 20px;
+}
+
+/* BOX STYLING */
+
+select {
+    /* -webkit-border-radius: 4px 0px;  */
+    border-radius: 4px;
+    background-color: white;
+}
